<resources>
    <string name="app_name">Indian Flavors</string>
    <string name="content_desc_image_banner_promo">image banner promo</string>
    <string name="content_desc_menu_biryani" translatable="false">menu biryani</string>
    <string name="content_desc_menu_meat" translatable="false">menu meat</string>
    <string name="content_desc_menu_snacks" translatable="false">menu snacks</string>
    <string name="text_snacks" translatable="false">Snacks</string>
    <string name="content_desc_menu_baverages" translatable="false">menu baverages</string>
    <string name="text_greeting_user">Hello </string>
    <string name="text_what_you_want_to_eat_today">what you want to eat today?</string>
    <string name="text_title_promo" translatable="false">PROMO GRAND OPENING</string>
    <string name="text_promo">Discount 30% All Items</string>
    <string name="text_biryani" translatable="false">Biryani</string>
    <string name="text_meat" translatable="false">Meat</string>
    <string name="text_baverages" translatable="false">Baverages</string>
    <string name="content_desc_icon_cart">icon cart</string>
    <string name="content_desc_image_butter_chicken">image butter chicken</string>
    <string name="content_desc_icon_notification">icon notification</string>
    <string name="content_desc_icon_user_profile">icon user profile</string>
    <string name="content_desc_image_chicken_curry">image chicken curry</string>
    <string name="content_desc_image_keema_biryani">image keema biryani</string>
    <string name="content_desc_image_naan">image naan</string>
    <string name="content_desc_image_logo">image logo</string>
    <string name="content_desc_image_white_logo">image white logo</string>
    <string name="text_rp_50_000" translatable="false">Rp 50.000</string>
    <string name="text_rp_42_000" translatable="false">Rp 42.000</string>
    <string name="text_rp_10_000" translatable="false">Rp 10.000</string>
    <string name="text_recomended_menu">Recommended Menu</string>
    <string name="text_butter_chicken" translatable="false">Butter Chicken</string>
    <string name="text_see_all">See All</string>
    <string name="text_chicken_curry" translatable="false">Chicken Curry</string>
    <string name="text_keema_biryani" translatable="false">Keema Biryani</string>
    <string name="text_naan" translatable="false">Naan</string>
    <string name="text_product_desc" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="text_button_back">button back</string>
    <string name="text_location">Location</string>
    <string name="text_address" translatable="false">Jl. BSD Green Office Park Jl. BSD Grand Boulevard, Sampora, BSD, Kabupaten Tangerang, Banten 15345</string>
    <string name="content_desc_button_minus">button minus</string>
    <string name="text_add_to_cart">Add to cart -</string>
    <string name="content_desc_button_plus">button plus</string>
    <string name="text_0" translatable="false">0</string>
    <string name="text_rp_0" translatable="false">Rp 0</string>
    <string name="content_desc_icon_location">icon location</string>
    <string name="content_desc_image_product">image product</string>
    <string name="content_desc_setup_control_button">setup control button</string>
    <string name="text_home">Home</string>
    <string name="text_cart">Cart</string>
    <string name="text_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_order_confirmation">Order Confirmation</string>
    <string name="text_pickup">Pickup</string>
    <string name="txt_delivery">Delivery</string>
    <string name="text_notes">notes</string>
    <string name="total_quantity">x%s</string>
    <string name="text_cart_is_empty">Cart is Empty</string>
    <string name="text_muhammad_izzudin">Muhammad Izzudin</string>
    <string name="text_mohammadzzudin_gmail_com">mohammadzzudin@gmail.com</string>
    <string name="text_0858_2625_8769">0858-2625-8769</string>
    <string name="text_error_password_empty">Password should not be empty</string>
    <string name="text_error_password_less_than_8_char">Password cannot less than 8 character</string>
    <string name="text_highlight_register">Register Here</string>
    <string name="text_error_email_empty">Email should not be empty</string>
    <string name="text_error_email_invalid">Enter a valid format email</string>
    <string name="text_highlight_login_here">Login Here</string>
    <string name="text_error_name_cannot_empty">Name cannot be empty</string>
    <string name="text_password_does_not_match">Password doesn\'t match</string>
    <string name="text_okay">Okay</string>
    <string name="text_total">Total :</string>
    <string name="text_not_registered_yet_register_here">Not registered yet Register Here</string>
    <string name="text_checkout">Checkout</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="text_already_have_an_account_login_here">Already have an account? Login Here</string>
    <string name="text_total_">Total :</string>
    <string name="text_change_profile">Change Profile</string>
    <string name="content_desc_button_edit_photo">button edit photo</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_logout">Logout</string>
    <string name="content_desc_button_trash">button trash</string>
    <string name="text_confirm_password">Confirm password</string>
    <string name="text_email">Email</string>
    <string name="text_name">Name</string>
    <string name="text_password">Password</string>
    <string name="text_delivery_method">Delivery Method</string>
    <string name="text_payment_method">Payment Method</string>
    <string name="text_cash">Cash</string>
    <string name="text_delivery">Delivery</string>
    <string name="text_e_wallet">E-Wallet</string>


</resources>